<resources>
    <string name="app_name">BoParentApp</string>

    <!-- Dialog Util Strings-->
    <string name="exit_dialog_title">Do you want to exit the application?</string>
    <string name="logout_title">Do you want to logout?</string>
    <string name="unauth_dialog_title">Please login to continue</string>
    <string name="text_title_yes">Yes</string>
    <string name="text_title_no">No</string>

    <string name="internet_error">Please check your internet connection and try again later.</string>
    <string name="text_time_out_msg">Connection Time Out!!!</string>
    <string name="text_json_exception_msg">Invalid Json Error!!!</string>
    <string name="text_server_error_msg">Server Connection Error!!!</string>
    <string name="text_access_token_prefix">Bearer %1$s</string>

    <string name="log_in">Log in</string>
    <string name="login_subtitle">Please enter your mobile number. We will send \n
you an OTP to verify your mobile number.</string>
    <string name="mobile_number_hint">Mobile Number</string>
    <string name="verify">Verify</string>
    <string name="verify_subtitle">We have sent the verification code to the email \n ousama@gmail.com</string>
    <string name="resend_otp">Resend OTP?</string>

</resources>