<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="authenticationViewModel"
            type="com.oneclick.blackandoneparent.presentation.ui.viewmodels.AuthenticationViewModel" />

        <import type="com.oneclick.blackandoneparent.core.custom_views.validators.MyValidations" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/splace_cl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SplashActivity">

        <View
            android:id="@+id/spread_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/spread_back"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/spread_logo"
            app:layout_constraintEnd_toEndOf="@id/spread_logo"
            app:layout_constraintStart_toStartOf="@id/spread_logo"
            app:layout_constraintTop_toTopOf="@id/spread_logo" />

        <ImageView
            android:id="@+id/spread_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/spread_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/main_logo"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:src="@drawable/b_o_logo"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@id/spread_logo"
            app:layout_constraintEnd_toEndOf="@id/spread_logo"
            app:layout_constraintStart_toStartOf="@id/spread_logo"
            app:layout_constraintTop_toTopOf="@id/spread_logo"
            tools:visibility="visible" />

        <!--    ***************************For Bottom Sheet********************  -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_layout_cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@drawable/curved_layout_bottom_sheet"
            android:paddingBottom="@dimen/_210sdp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:visibility="gone">

            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:src="@drawable/b_o_logo"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_13sdp"
                android:layout_marginTop="@dimen/_75sdp"
                android:text="@string/log_in"
                android:textAlignment="center"
                android:textColor="@color/text_color_theme"
                android:textSize="@dimen/_26ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/login_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_13sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:letterSpacing="0.0"
                android:text="@string/login_subtitle"
                android:textAlignment="textStart"
                android:textColor="@color/hint_color_theme"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_title" />

            <com.oneclick.blackandoneparent.core.custom_views.CustomEditTextView
                android:id="@+id/mobile_number_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_13sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/capsule_with_theme_border"
                android:digits="0123456789"
                android:focusable="auto"
                android:hint="@string/mobile_number_hint"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:text="@={authenticationViewModel.strLoginPhoneNumber}"
                android:maxLength="10"
                android:maxLines="1"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_subtitle" />

            <com.oneclick.blackandoneparent.core.custom_views.CustomTextView
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_13sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/capsule_with_solid"
                android:padding="@dimen/_13sdp"
                android:text="Log In"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mobile_number_et" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>